--- a/app.yaml
+++ b/app.yaml
@@ -1,45 +1,26 @@
-application: enduring-signal-227804
-version: 1
+# [START django_app]
 runtime: python27
 api_version: 1
-threadsafe: true
+threadsafe: yes
 
 handlers:
-
-- url: /_ah/(mapreduce|queue|warmup|start|stop).*
-  script: mysite.wsgi.application
-  login: admin
-  secure: always
-
-- url: /_ah/internalupload.*
-  script: mysite.wsgi.application
-  secure: always
-
 - url: /static
   static_dir: static/
-  secure: always
-
-# Set Django admin to be login:admin as well as Django's is_staff restriction
-- url: /admin.*
+- url: .*
   script: mysite.wsgi.application
-  secure: always
-  login: admin
 
-- url: /.*
-  script: mysite.wsgi.application
-  secure: always
+# [END django_app]
 
+# Google App Engine limits application deployments to 10,000 uploaded files per
+# version. The skip_files section allows us to skip virtual environment files
+# to meet this requirement. The first 5 are the default regular expressions to
+# skip, while the last one is for all env/ files.
 skip_files:
-  - ^manage\.py$
-  - ^README\.md$
-  - ^install_deps$
-  - ^requirements/.*\.txt$
-  - ^sitepackages/dev.*
-  - ^.*\.(egg|dist)-info/.*$
+- ^(.*/)?#.*#$
+- ^(.*/)?.*~$
+- ^(.*/)?.*\.py[co]$
+- ^(.*/)?.*/RCS/.*$
+- ^(.*/)?\..*$
+- .git/
+- ^env/.*$
 
-  # Defaults.
-  - ^(.*/)?#.*#$
-  - ^(.*/)?.*~$
-  - ^(.*/)?.*\.py[co]$
-  - ^(.*/)?.*/RCS/.*$
-  - ^(.*/)?\..*$
