added vendors lib

--- a/app.yaml
+++ b/app.yaml
@@ -9,6 +9,21 @@ handlers:
 - url: .*
   script: mysite.wsgi.application
 
+
+# Only pure Python libraries can be vendored
+# Python libraries that use C extensions can
+# only be included if they are part of the App Engine SDK 
+# Using Third Party Libraries: https://cloud.google.com/appengine/docs/python/tools/using-libraries-python-27
+libraries:
+- name: django
+  version: 1.11
+- name: pytz
+  version: 2017.3
+- name: ssl
+  version: latest
+- name: six
+  version: latest
+
 # [END django_app]
 
 # Google App Engine limits application deployments to 10,000 uploaded files per
