--- a/index.yaml
+++ b/index.yaml
@@ -33,6 +33,11 @@ indexes:
   - name: __key__
     direction: desc
 
+- kind: djangae_group
+  properties:
+  - name: __key__
+    direction: desc
+
 - kind: django_admin_log
   properties:
   - name: user_id
