--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,5 @@
-application: enduring-signal-227804
-version: 1
+# application: enduring-signal-227804
+# version: 1
 runtime: python27
 api_version: 1
 threadsafe: true
@@ -37,7 +37,7 @@ libraries:
 - name: django
   version: 1.11
 - name: pytz
-  version: 2016.4
+  version: 2017.3
 - name: ssl
   version: latest
 - name: six
